[tool.poetry]
name = "vr_address_tools"
version = "0.1.0"
description = "Tools for converting a Skyrim SSE skse mod to Skyrim VR"
authors = ["Alan D. Tse <alandtse@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
robotpy-cppheaderparser = "^5.0.15"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
