[tool.poetry]
name = "vr_address_tools"
version = "0.35.0"
description = "Tools for converting a Skyrim SSE skse mod to Skyrim VR"
authors = ["Alan D. Tse <alandtse@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
robotpy-cppheaderparser = ">=5.0.15"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = ">=21.9b0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable='pyproject.toml:version'
upload_to_pypi=false
upload_to_release=false
changelog_sections="feature,fix,breaking,documentation,performance,refactor"
build_command = ""
branch = "main"
commit_subject="[skip ci] {version}"